--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -1,149 +1,130 @@
 <form class="view-form" name="projectUpdateForm" novalidate>
 
-  <div class="view-title-container flex-row">
-    <h1>Project Update &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span class="placeholder-value"
-                                                                           ng-if="!s.communication.name">Untitled</span>
-    </h1>
-    <div class="actions">
-      <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
-      <button class="btn btn-danger btn-sm"
-              ng-if="canDelete"
-              ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
+	<div class="view-title-container flex-row">
+		<h1>Project Update &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span class="placeholder-value" ng-if="!s.communication.name">Untitled</span>
+		</h1>
+		<div class="actions">
+			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
       </button>
-      <button type="button" class="btn btn-default btn-sm" ng-click="save(projectUpdateForm.$valid)"><span
+			<button type="button" class="btn btn-default btn-sm" ng-click="save(projectUpdateForm.$valid)"><span
         class="glyphicon glyphicon-save"></span><span>Save</span></button>
-      <button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'"
-              ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)"><span
+			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)"><span
         class="glyphicon glyphicon-send"></span><span>Send</span></button>
-    </div>
-  </div>
+		</div>
+	</div>
 
-  <div class="view-body-container">
+	<div class="view-body-container">
 
-    <ul class="nav nav-tabs" ng-init="form.curTab = 'Update Details'">
-      <li role="presentation" ng-class="{'active':form.curTab === 'Update Details'}" class="form-group" x-show-errors>
-        <a ng-click="form.curTab = 'Update Details'" title="Edit Project Update Details"
-           name="projectUpdateDetailsForm">
-          <span class="glyphicon glyphicon-exclamation-sign"></span>Update Details</a>
-      </li>
-      <li role="presentation" ng-class="{'active':form.curTab === 'recipients'}" class="form-group" x-show-errors>
-        <a ng-click="form.curTab = 'recipients'" title="Edit Project Recipients" name="recipientsForm">
-          <span class="glyphicon glyphicon-exclamation-sign"></span>Recipients ({{recipients.length}})</a>
-      </li>
-    </ul>
+		<ul class="nav nav-tabs" ng-init="form.curTab = 'Update Details'">
+			<li role="presentation" ng-class="{'active':form.curTab === 'Update Details'}" class="form-group" x-show-errors>
+				<a ng-click="form.curTab = 'Update Details'" title="Edit Project Update Details" name="projectUpdateDetailsForm">
+					<span class="glyphicon glyphicon-exclamation-sign"></span>Update Details</a>
+			</li>
+			<li role="presentation" ng-class="{'active':form.curTab === 'recipients'}" class="form-group" x-show-errors>
+				<a ng-click="form.curTab = 'recipients'" title="Edit Project Recipients" name="recipientsForm">
+					<span class="glyphicon glyphicon-exclamation-sign"></span>Recipients ({{recipients.length}})</a>
+			</li>
+		</ul>
 
-    <div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
+		<div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
 
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="form-group" x-show-errors>
-            <label class="control-label">Name<em class="required">(Required)</em></label>
-            <input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
-          </div>
-          <div>
-            <label class="control-label">Related Content ({{artifacts.length}})</label>
-            <ul class="tag-list" ng-if="artifacts.length > 0">
-              <li class="tag" ng-repeat="art in artifacts">
-                <span class="tag-name">{{art.name}}</span>
-                <button class="btn" type="button" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span>
-                </button>
-              </li>
-            </ul>
-            <button class="btn btn-default btn-sm" type="button" x-artifact-list-chooser x-project="project"
-                    x-current="artifacts">+ Add Related Content
+			<div class="panel panel-default">
+				<div class="panel-body">
+					
+					<div class="form-group" x-show-errors>
+						<label class="control-label">Name<em class="required">(Required)</em></label>
+						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
+					</div>
+
+					<div class="form-group">
+						<label class="control-label">Related Content ({{artifacts.length}})</label>
+						<div class="tag-list-container form-control clearfix">
+							<ul class="tag-list">
+								<li class="tag" ng-repeat="art in artifacts">
+									<span class="tag-name">{{art.name}}</span>
+									<button class="btn" type="button" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span></button>
+								</li>
+								<li class="add-tag">
+									<button class="btn btn-default btn-sm" type="button"
+										x-artifact-list-chooser 
+										x-project="project" 
+										x-current="artifacts"><span class="glyphicon glyphicon-plus"></span></button>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading flex-row">
+					<h2>Configure Email</h2>
+					<div class="actions">
+						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template
             </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel panel-default">
-        <div class="panel-heading flex-row">
-          <h2>Configure Email</h2>
-          <div class="actions">
-            <button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project"
-                    x-current="emailTemplate">Use Existing Template
-            </button>
-          </div>
-        </div>
-        <div class="panel-body">
-          <div class="form-group" x-show-errors>
-            <label class="control-label">Subject<em class="required">(Required)</em></label>
-            <input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject"
-                   title="Subject" required></input>
-          </div>
-          <div class="form-group no-margin" x-show-errors>
-            <label class="control-label">Message<em class="required">(Required)</em></label>
-            <textarea ui-tinymce="tinymceOptions" type="text"
-                      ng-model="s.communication.templateContent" id="message" name="message" title="Message" required
-                      ng-blur="activeItem = false">
+					</div>
+				</div>
+				<div class="panel-body">
+					<div class="form-group" x-show-errors>
+						<label class="control-label">Subject<em class="required">(Required)</em></label>
+						<input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject" title="Subject" required></input>
+					</div>
+					<div class="form-group no-margin" x-show-errors>
+						<label class="control-label">Message<em class="required">(Required)</em></label>
+						<textarea ui-tinymce="tinymceOptions" type="text" ng-model="s.communication.templateContent" id="message" name="message"
+							title="Message" required ng-blur="activeItem = false">
                     </textarea>
-          </div>
-        </div>
-      </div>
-    </div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
-      <div class='button-bar'>
-        <button type="button" x-add-new-recipient x-project="project" x-current="adhocRecipient"
-                class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add New</span>
+		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
+			<div class='button-bar'>
+				<button type="button" x-add-new-recipient x-project="project" x-current="adhocRecipient" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add New</span>
         </button>
-        <button type="button" x-user-search-chooser x-project="project" x-destination="existingRecipients"
-                class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span>
+				<button type="button" x-user-search-chooser x-project="project" x-destination="existingRecipients" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span>
         </button>
-      </div>
-      <div class="panel panel-default">
-        <table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
-          <tr ng-repeat="o in $data">
-            <td class="name-col"
-                header-class="'name-col'"
-                data-title="'Name'"
-                filter="{'displayName':'text'}"
-                sortable="'displayName'">{{o.displayName}}
-            </td>
-            <td class="email-col"
-                header-class="'email-col'"
-                data-title="'Email'"
-                filter="{'email':'text'}"
-                sortable="'email'">{{o.email}}
-            </td>
-            <td class="org-col"
-                header-class="'org-col'"
-                data-title="'Organization'"
-                filter="{'org':'text'}"
-                sortable="'org'">{{o.org}}
-            </td>
-            <td class="actions-col action-x1" header-class="'actions-col action-x1'"
-                data-title="''">
-              <button type="button" class="btn btn-default btn-sm" ng-click="removeRecipient(o.email)">
+			</div>
+			<div class="panel panel-default">
+				<table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
+					<tr ng-repeat="o in $data">
+						<td class="name-col" header-class="'name-col'" data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}
+						</td>
+						<td class="email-col" header-class="'email-col'" data-title="'Email'" filter="{'email':'text'}" sortable="'email'">{{o.email}}
+						</td>
+						<td class="org-col" header-class="'org-col'" data-title="'Organization'" filter="{'org':'text'}" sortable="'org'">{{o.org}}
+						</td>
+						<td class="actions-col action-x1" header-class="'actions-col action-x1'" data-title="''">
+							<button type="button" class="btn btn-default btn-sm" ng-click="removeRecipient(o.email)">
                 <span class="glyphicon glyphicon-remove"></span>
               </button>
-            </td>
-          </tr>
+						</td>
+					</tr>
 
-          <tr class="no-records hidden" ng-if="!$data || $data.length === 0">
-            <td colspan="2">
-              No records found.
-            </td>
-          </tr>
+					<tr class="no-records hidden" ng-if="!$data || $data.length === 0">
+						<td colspan="2">
+							No records found.
+						</td>
+					</tr>
 
-        </table>
-      </div>
-    </div>
+				</table>
+			</div>
+		</div>
 
-    <div class="form-footer">
-      <div class="pull-right">
-        <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
-        <button class="btn btn-danger btn-sm"
-                ng-if="canDelete"
-                ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
+		<div class="form-footer">
+			<div class="pull-right">
+				<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
         </button>
-        <button type="button" class="btn btn-default btn-sm" ng-click="save(projectUpdateForm.$valid)"><span
+				<button type="button" class="btn btn-default btn-sm" ng-click="save(projectUpdateForm.$valid)"><span
           class="glyphicon glyphicon-save"></span><span>Save</span></button>
-        <button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'"
-                ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)"><span
+				<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)"><span
           class="glyphicon glyphicon-send"></span><span>Send</span></button>
-      </div>
-    </div>
+			</div>
+		</div>
 
-  </div>
+	</div>
 </form>
