--- a/modules/users/client/views/settings/modal-edit-profile.client.view.html
+++ b/modules/users/client/views/settings/modal-edit-profile.client.view.html
@@ -131,7 +131,25 @@
       <!-- END: ADDRESS FIELDS -->
 
       <hr>
-      
+
+      <div class="row">
+        <div class="col-sm-6 col-md-3">
+          <div class="form-group">
+            <label class="control-label" for="viaEmail">By Email</label>
+            <input type="checkbox" ng-model="myProfile.user.viaEmail" id="viaEmail" />
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+          <div class="form-group">
+            <label class="control-label" for="viaMail">By Mail</label>
+            <input type="checkbox" ng-model="myProfile.user.viaMail" id="viaMail" />
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
       <!-- BEGIN: NOTES -->
       <div class="row">
         <div class="col-sm-9">
