--- a/modules/project-conditions/client/views/projectcondition-edit.html
+++ b/modules/project-conditions/client/views/projectcondition-edit.html
@@ -1,109 +1,107 @@
 
+<form class="view-form" name="conditionForm">
 
-	<div class="view-title-container">
-		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Add/Edit Condition</h1>
+	<div class="view-title-container flex-row">
+		<h1>Add/Edit Condition</h1>
+		<div class="actions">
+			<button class="btn btn-default btn-sm"
+				ui-sref="p.projectcondition.list">Cancel</button>
+			<button class="btn btn-danger btn-sm"
+				ng-if="condition.userCan.delete && edit === true"
+				ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
+			<button class="btn btn-default btn-sm"
+				ng-disabled="conditionForm.$invalid"
+				ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+		</div>
 	</div>
 	
 	<div class="view-body-container">
-
-		<form name="conditionForm">
-
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group" x-show-errors>
-						<label for="name" class="control-label">Name</label>
-						<input id="name" name="name" type="text" class="form-control input-sm" ng-model="condition.name" required>
-						<div ng-messages="conditionForm.name.$error" role="alert">
-							<p class="help-block error-text" ng-message="required">Name is required.</p>
-						</div>
-					</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="form-group" x-show-errors>
+					<label class="control-label" for="name">Name<em class="required">(Required)</em></label>
+					<input class="form-control" id="name" name="name" type="text" ng-model="condition.name" required>
 				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label for="subject" class="control-label">Subject</label>
-						<input id="subject" type="text" class="form-control input-sm" ng-model="condition.subject">
-					</div>
+			</div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label class="control-label" for="sector">Sector</label>
+					<select class="form-control" id="sector"
+						ng-model="condition.sector" 
+						ng-options="sector.id as sector.title for sector in sectors"></select>
 				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label for="sector" class="control-label">Sector</label>
-						<select id="sector" ng-model='condition.sector' class="form-control input-sm" ng-options="sector.id as sector.title for sector in sectors"></select>
+			</div>
+			<div class="col-md-4">
+				<div class="form-group">
+					<label class="control-label" for="stage">Stage</label>
+					<select class="form-control" id="stage"
+						ng-model="condition.stage" 
+						ng-options="stage.id as stage.title for stage in stages"></select>
+				</div>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label" for="subject">Subject</label>
+			<input class="form-control" id="subject" type="text" ng-model="condition.subject">
+		</div>
+		<div class="form-group">
+			<label class="control-label" for="shortDesc">Condition</label>
+			<textarea ui-tinymce rows="5" title="Condition" id="shortDesc" ng-model="condition.description"></textarea>
+		</div>
+		<div class="form-group">
+			<label class="control-label" for="shortDesc">Report Requirements</label>
+			<textarea ui-tinymce rows="5" title="Report Requirements" id="shortDesc" ng-model="condition.reportRequirements"></textarea>
+		</div>
+		<div class="form-group">
+			<label class="control-label" for="shortDesc">Associated Value Components</label>
+			<div class="tag-list-container form-control">
+				<ul class="tag-list">
+					<li class="tag" ng-repeat="o in condition.vcs">
+						<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+						<button class="btn"><span aria-hidden="true">×</span></button>
+					</li>
+					<li class="add-tag">
+						<button class="btn btn-sm" type="button" title="Link Valued Components"
+							ng-click="editLinkedVcs()"><span class="glyphicon glyphicon-plus"></button>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="form-group">
+					<label for="pillar" class="control-label">Pillars</label>
+					<div class="well well-sm">
+						<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
 					</div>
 				</div>
 			</div>
+			<div class="col-sm-6">
+				<div class="form-group">
+					<label for="phase" class="control-label">Phase</label>
+					<div class="well well-sm">
+						<select-array x-source-array="phases" x-selected-array="condition.phases" x-key-string="id" x-value-string="title"></select-array>
+					</div>
+				</div>
+			</div>
+		</div>
 
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="form-group">
-						<label for="shortDesc" class="control-label">Condition</label>
-						<textarea ui-tinymce rows="5" title="Condition" id="shortDesc" ng-model="condition.description"></textarea>
-					</div>
-				</div>
+		<div class="form-footer clearfix">
+			<div class="pull-right">
+				<button class="btn btn-sm btn-default"
+					ui-sref="p.projectcondition.list">Cancel</button>
+				<button class="btn btn-sm btn-danger"
+					ng-if="condition.userCan.delete && edit === true"
+					ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
+				<button class="btn btn-sm btn-default"
+					ng-disabled="conditionForm.$invalid"
+					ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
 			</div>
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="form-group">
-						<label for="shortDesc" class="control-label">Report Requirements</label>
-						<textarea ui-tinymce rows="5" title="Report Requirements" id="shortDesc" ng-model="condition.reportRequirements"></textarea>
-					</div>
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="form-group">
-						<label for="shortDesc" class="control-label">Associated Value Components</label>
-						<ul class="anchor-list">
-							<li ng-repeat="o in condition.vcs" ui-sref="p.artifact.view({artifactId:o._id})">
-								<a class="title">{{o.name}}</a>
-							</li>
-						</ul>
-						<button class="btn btn-default btn-sm anchor-list-btn" ng-click="editLinkedVcs()" type="button" title="Link Valued Components">+ Add Content</button>
-					</div>
-				</div>
-			</div>
+		</div>
 
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="pillar" class="control-label">Pillars</label>
-						<div class="well well-sm">
-							<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
-						</div>
-					</div>
-				</div>
+	</div><!--/VIEW BODY CONTAINER -->
 
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="phase" class="control-label">Phase</label>
-						<div class="well well-sm">
-							<select-array x-source-array="phases" x-selected-array="condition.phases" x-key-string="id" x-value-string="title"></select-array>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="form-group">
-						<label for="stage" class="control-label">Stage</label>
-						<select id="stage" ng-model="condition.stage" class="form-control input-sm" ng-options="stage.id as stage.title for stage in stages"></select>
-					</div>
-				</div>
-			</div>
-
-			<hr>
-
-			<div class="row">
-				<div class="col-sm-12 text-right">
-					<button class="btn btn-default" ui-sref="p.projectcondition.detail({conditionId:condition._id})">Cancel</button>
-					<button class="btn btn-danger"
-							ng-if="condition.userCan.delete && edit === true"
-							ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-					<button class="btn btn-primary" ng-disabled="conditionForm.$invalid" ng-click="save()">Save</button>
-				</div>
-			</div>
-		</form>
-	</div>
+</form>
 
 
