--- a/modules/project-conditions/client/views/projectcondition-edit.html
+++ b/modules/project-conditions/client/views/projectcondition-edit.html
@@ -2,7 +2,7 @@
 <form class="view-form" name="conditionForm">
 
 	<div class="view-title-container flex-row">
-		<h1>Add/Edit Condition</h1>
+		<h1>Edit Condition &nbsp;&rsaquo;&nbsp; {{condition.name}}<span class="placeholder-value" ng-if="!condition.name">Untitled</span></h1>
 		<div class="actions">
 			<button class="btn btn-default btn-sm"
 				ui-sref="p.projectcondition.list">Cancel</button>
@@ -16,76 +16,94 @@
 	</div>
 	
 	<div class="view-body-container">
-		<div class="row">
-			<div class="col-md-4">
-				<div class="form-group" x-show-errors>
-					<label class="control-label" for="name">Name<em class="required">(Required)</em></label>
-					<input class="form-control" id="name" name="name" type="text" ng-model="condition.name" required>
-				</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2>Condition Details</h2>
 			</div>
-			<div class="col-md-4">
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-md-3">
+						<div class="form-group" x-show-errors>
+							<label class="control-label" for="name">Name<em class="required">(Required)</em></label>
+							<input class="form-control" id="name" name="name" type="text" ng-model="condition.name" required>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="form-group">
+							<label class="control-label" for="subject">Subject</label>
+							<input class="form-control" id="subject" type="text" ng-model="condition.subject">
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="form-group">
+							<label class="control-label" for="sector">Sector</label>
+							<select class="form-control" id="sector"
+								ng-model="condition.sector" 
+								ng-options="sector.id as sector.title for sector in sectors"></select>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="form-group">
+							<label class="control-label" for="stage">Stage</label>
+							<select class="form-control" id="stage"
+								ng-model="condition.stage" 
+								ng-options="stage.id as stage.title for stage in stages"></select>
+						</div>
+					</div>
+				</div>
 				<div class="form-group">
-					<label class="control-label" for="sector">Sector</label>
-					<select class="form-control" id="sector"
-						ng-model="condition.sector" 
-						ng-options="sector.id as sector.title for sector in sectors"></select>
+					<label class="control-label" for="shortDesc">Associated Value Components</label>
+					<div class="tag-list-container form-control">
+						<ul class="tag-list">
+							<li class="tag" ng-repeat="o in condition.vcs">
+								<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+								<button class="btn" ng-click="condition.vcs.splice($index, 1)"><span aria-hidden="true">×</span></button>
+							</li>
+							<li class="add-tag">
+								<button class="btn btn-sm" type="button" title="Link Valued Components"
+									ng-click="editLinkedVcs()"><span class="glyphicon glyphicon-plus"></button>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="form-group">
-					<label class="control-label" for="stage">Stage</label>
-					<select class="form-control" id="stage"
-						ng-model="condition.stage" 
-						ng-options="stage.id as stage.title for stage in stages"></select>
+				<div class="form-group no-margin">
+					<label class="control-label" for="phase">Post Certification Phases</label>
+					<select-array class="custom-select-list"
+						x-source-array="phases"
+						x-selected-array="condition.phases"
+						x-key-string="id"
+						x-value-string="title"></select-array>
 				</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="control-label" for="subject">Subject</label>
-			<input class="form-control" id="subject" type="text" ng-model="condition.subject">
-		</div>
-		<div class="form-group">
-			<label class="control-label" for="shortDesc">Condition</label>
-			<textarea ui-tinymce rows="5" title="Condition" id="shortDesc" ng-model="condition.description"></textarea>
-		</div>
-		<div class="form-group">
-			<label class="control-label" for="shortDesc">Report Requirements</label>
-			<textarea ui-tinymce rows="5" title="Report Requirements" id="shortDesc" ng-model="condition.reportRequirements"></textarea>
-		</div>
-		<div class="form-group">
-			<label class="control-label" for="shortDesc">Associated Value Components</label>
-			<div class="tag-list-container form-control">
-				<ul class="tag-list">
-					<li class="tag" ng-repeat="o in condition.vcs">
-						<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
-						<button class="btn" ng-click="condition.vcs.splice($index, 1)"><span aria-hidden="true">×</span></button>
-					</li>
-					<li class="add-tag">
-						<button class="btn btn-sm" type="button" title="Link Valued Components"
-							ng-click="editLinkedVcs()"><span class="glyphicon glyphicon-plus"></button>
-					</li>
-				</ul>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="pillar" class="control-label">Pillars</label>
-					<div class="well well-sm">
-						<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
-					</div>
-				</div>
+		<div class="panel panel-default vc-rtf-editor">
+			<div class="panel-heading">
+				<h2>Description</h2>
 			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="phase" class="control-label">Phase</label>
-					<div class="well well-sm">
-						<select-array x-source-array="phases" x-selected-array="condition.phases" x-key-string="id" x-value-string="title"></select-array>
-					</div>
-				</div>
+			<div class="panel-body">
+				<textarea class="form-control" ui-tinymce rows="5" title="Condition" id="shortDesc"
+					ng-model="condition.description"></textarea>
 			</div>
 		</div>
+
+		<div class="panel panel-default vc-rtf-editor">
+			<div class="panel-heading">
+				<h2>Report Requirements</h2>
+			</div>
+			<textarea class="form-control" ui-tinymce rows="5" title="Report Requirements" id="shortDesc"
+				ng-model="condition.reportRequirements"></textarea>
+		</div>
+
+		<!-- HIDDEN AS PER PM REQUEST -->
+		<div class="col-sm-6 hidden">
+			<div class="form-group">
+				<label for="pillar" class="control-label">Pillars</label>
+				<div class="well well-sm">
+					<select-array x-source-array="pillars" x-selected-array="condition.pillars" x-key-string="id" x-value-string="title"></select-array>
+				</div>
+			</div>
+		</div><!--/HIDDEN AS PER PM REQUEST -->
 
 		<div class="form-footer clearfix">
 			<div class="pull-right">
