--- a/modules/project-conditions/client/views/projectcondition-view.html
+++ b/modules/project-conditions/client/views/projectcondition-view.html
@@ -1,5 +1,5 @@
 <div class="view-title-container flex-row">
-	<h1>{{condition.name}}</h1>
+	<h1>Condition &nbsp;&rsaquo;&nbsp; {{condition.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-sm btn-default"
 			ng-if="project.userCan.createProjectCondition"
@@ -39,12 +39,22 @@
 					<div class="value" ng-bind-html="condition.stage"></div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" ng-if="condition.vcs.length > 0">
 				<div class="detail-row col-md-12">
-					<label for="shortDesc" class="control-label">Associated Value Components</label>
+					<label for="shortDesc" class="control-label">Associated Valued Components</label>
 					<ul class="anchor-list">
 						<li ng-repeat="o in condition.vcs" ui-sref="p.vc.detail({vcId:o._id})">
 							<a class="title">{{o.name}}</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row" ng-if="condition.phases.length > 0">
+				<div class="detail-row col-md-12">
+					<label for="shortDesc" class="control-label">Post Certification Phases</label>
+					<ul class="anchor-list">
+						<li ng-repeat="o in condition.phases">
+							<span>{{o}}</span>
 						</li>
 					</ul>
 				</div>
@@ -54,7 +64,7 @@
 
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2>Condition</h2>
+			<h2>Description</h2>
 		</div>
 		<div class="panel-body">
 			<pre class="value wrap-text" ng-bind-html="condition.description"></pre>
