ESM-46 - Conditions UI Development
- Fixed an issue with incorrect naming convention on the add valued component modal
- Fixed an issue with incorrect spacing on the RTF widget for condition description
- Some minors styling tweaks for the tag-list component

--- a/modules/utils/client/views/partials/entity-select-modal.html
+++ b/modules/utils/client/views/partials/entity-select-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
-	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
-	<h3 class="modal-title">Please Select</h3>
+	<button class="btn btn-default close" ng-click="cancel()"><span aria-hidden="true">×</span></button>
+	<h3 class="modal-title">Select Valued Components</h3>
 </div>
 
 <div class="modal-body">
