--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3456,13 +3456,13 @@ section {
 
 .tag-list {
 	margin: 0;
+	margin-top: 1px;
 	padding: 0;
 
 	.add-tag,
 	.tag {
 		margin: 0.2rem;
 		display: inline-block;
-		padding: 0.2rem;
 		font-size: 1.2rem;
 		color: #FFF;
 		vertical-align: top;
@@ -3483,6 +3483,7 @@ section {
 	}
 
 	.tag {
+		padding: 0.2rem;
 		background: $success-bg;
 		border-radius: 4px;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, .075);
@@ -3498,7 +3499,7 @@ section {
 		}
 
 		+ .add-tag {
-			margin-left: -0.4rem;
+			margin-left: -0.2rem;
 		}
 	}
 }
@@ -5429,7 +5430,7 @@ tmpl-template-render {
 		padding-top: 0;
 
 		.btn {
-			padding: 0.4rem 0.8rem;
+			padding: 0.3rem 1rem;
 			font-size: 1.2rem;
 			font-weight: normal;
 		}
