Inspections UI development
- Changing 'Associated' Content to 'Certificate Requirements Inspected'

--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-12 detail-row" ng-if="ir.conditionArtifacts.length > 0">
-					<label>Associated Content</label>
+					<label>Certificate Requirements Inspected</label>
 					<ul class="anchor-list">
 						<li ng-repeat="o in ir.conditionArtifacts" ui-sref="p.artifact.view({artifactId:o._id})">
 							<a class="title">{{o.name}}</a>
