--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -9,7 +9,7 @@
 			<button class="btn btn-danger btn-sm"
 	            ng-if="canDelete"
 	            ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-			<button class="btn btn-default btn-sm"
+			<button class="btn btn-primary btn-sm"
 				ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
 			<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#publishNotify"
 				ng-if="canUnpublish"
@@ -46,14 +46,13 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 form-group">
-						<label class="control-label">Associated Content</label>
+						<label class="control-label">Cerfificate Requirements Inspected</label>
 						<div class="tag-list-container form-control clearfix">
 							<ul class="tag-list">
 								<li class="tag" ng-repeat="o in ir.conditionArtifacts">
 									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
 									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
-								</li>
-								<li class="add-tag">
+								</li><li class="add-tag">
 									<button class="add-btn btn btn-sm"
 										ng-if="project.userCan.createInspectionReport"
 										ng-click="openAddTopic()" type="button" title="Add Associated Content"><span class="glyphicon glyphicon-plus"></span>
@@ -71,8 +70,7 @@
 								<li class="tag" ng-repeat="o in ir.conditions">
 									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
 									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
-								</li>
-								<li class="add-tag">
+								</li><li class="add-tag">
 									<button class="add-btn btn btn-sm"
 										ng-if="project.userCan.createInspectionReport"
 										ng-click="addIRCondition()" type="button" title="Add Conditions"><span class="glyphicon glyphicon-plus"></span>
@@ -82,18 +80,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<label class="control-label">Inspection Record</label>
-						<ul class="anchor-list">
-							<li>
-								<a ui-sref="p.artifact.edit({artifactId:ir.artifact._id})"
-									ng-if="project.userCan.createInspectionReport">{{ir.artifact.name}}</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="form-group">
+				<div class="form-group no-margin">
 					<label class="control-label">Inspection Record</label>
 					<ul class="anchor-list">
 						<li>
@@ -163,7 +150,7 @@
 				<button class="btn btn-danger btn-sm"
 					ng-if="canDelete"
 					ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-				<button class="btn btn-default btn-sm"
+				<button class="btn btn-primary btn-sm"
 					ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
 			</div>
 		</div>
